# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xKc_X4Zd1jr9xN1KC_w3Zpnt_5jWyvlyT86npCCiFF4A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x16Qxh4RtLncE3JJ7ZcjvHNwLhwW9v16AKduT0kRf9N_E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x14yIxgOSp5LWowJpZfjgbaduuoz91SFg0E0WNi73JbeI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xwfWmg-pIroKmQuazpENxktwIT62vxHu8kU_DJIMR6GQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x15XeludLoqG3GHHjBbAY3kAD4Pst1KYp7eQQ8p6_OZnU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x10r9zCDLQGgl1zMLdHrc0lywTix4ishSzLEldiWRTZ68=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1PveNYLXW_DK-I_T6kXPcA1Oo1RNZTt9wshXmDSeUKt4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT23PyxqqTuf80hXGmpvqzER8scMvhxIQQDmOQnm7txrEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2ECnZUwCoUzFBSZNZt4N4mc_Xm_A9QwTI3ha3h_Hfdrs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2U-GXXSGSCKKL7zEnHH6msvy9t36lyWVDn24Ozvh-RS0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2VezC6DNgYU5Zy8L8xqcPBHa5eg_qeZiZrj2Ve_Wd6BI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2ZtJryMG5DrSkDmxm0PSiXhbZ0Npgu9XLt1iQWX34IuM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1BhWs6OI6X2ooqc7Hbgop--ItlC1Mmwbd8Gp6abCig8o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Q9eO39bv5ST75tFL6Qd4fWa3DWCOqgzioDtKG2TkU8A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1_-QizJ-pqp9JZqyd59LnOvTQ8T0QYuuYTmMh0riJIdw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1ezIb9bsQECt6OVdaf4fae3xAaVJtOIUSsNzzDF9szbE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1hdxjb-mzaQultHQjMzQ3BoV0hHao6nznBQZ53mw7t3g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1ipnsZrBT-aAnNTcjDYDVZ_jlhb1YpGGjWf79jE2tklM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1CMmkFMaCq-4-WPwZHTTYXkj5bRp4Ard2fpengEvH__k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64A_0mQHRd7C8pXm9aokFzURGzg-OUF8TK6bS7_FAaT9Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64cNFQ8G-2Isf3zM-RqPW5enXcpzmSxG1NIom_DAD7_ko=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12JS1KjIddcdW4bzVhQ7KkyAqIvs8wSMRZOld8u-hrP0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x15GDoW--zS3XZ5jgPPWvirWSruvas57w5OuJ5eCYyFJA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x17bslAzAHz-jF8v0nZrM7ngTAADc85b_y51eommzUt8c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_SBc7ZzsKi3pIYP1CqL_9285e0LxU-ATu0yOOLwJek8I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs__Z0gRhqGPoq_oaDYePcwzuo9WbiUeEJbRbpCVYsJtds=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_yzp906z6YhzfSTZzkJz_uk1kCJi4QVowC1PiiOawLtg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32O5FyFNf0OOq_eVywuQJ_XA_Zjd7IbKDokMg91CDwLck=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32Z6fsSM6v7vTEGb9JKd_2jTaQUfGWWKccYxitYz-aaBc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32kxGMIFx7rWucD_58ZHjFSGMOI80QV31JYwd1J_RKXRU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32rdcQaSnpMZHBIsLFC19155Y6R1-gw-zRFZ-VKE4D-uc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xS1P3iBlptgy1f9A3VX1hVjWBB5HDQ6K5s6LdKmh-2vc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xU6TahmvBHG3REie6lAkT934HWTn4V52lRE4fJBK_z08=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1-_weiQ9LWYv-36dCP5-dq6582_voK2M4FmqzihUIrJA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT14-Uk_Hn1DjkNYfb7-CNfS3ZaGZfAgzevchAQRidky7Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1MCxxbzp969YRv8Jvz5pUQevq7PKBhlay6GMdsj-RyEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1RGpzUCg7dhz767aot_MaE6EIUWYYl3oTDhb9PBJYq_I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1TLNpK-7FFIWOLAepqmwo-z4G5fe6zNA5ydULsZJRqyk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1WzkgxmDBtr4RIHIuN5BCZEok4Si7Ulp6HS8bf9dgs7c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT17fjzzfqWG51-YstXsM5jgyDp0Z_8LUhkHfkh1ukKKfU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1xR-ebCX-QFbBarMjX9gI7aTvt9wgW9JF0pEWTlehtYA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3J8FouoYxHLfmpFOuJMr0KjvXfvsSo9vF1Uu0odL9A7U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3xsf8luJbAPKGchonhPbhckiq-qtvjqnmDb3w-9mjbYk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4KsUiq6ZszUH-taxEwSLUA-HW35SycpFdCHj8rhl0acg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4_OcLj0JqZ6MIla9-4TuIA5MSFCpj4M0l9Hs0F1_YZRI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x169Bs-UnrcAWEuc3JQxE1fXIs4eQiEIu_IaWWzt7Wgyks=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16qoWl0qu8LO5XHF8VCZ0SjjTQl2qsY8wqlyiLP5kSXNc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16gF0uITWOerxjWdKXl5clRt0c6N5H3dn-yeSg-ROH1OM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x162Clp-MZgWVDb2YRz5ENkPgNmF6tlEM-wIkqiHo5SeLk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16G0nb3BohG3PoLdewm1ZIOblzMoka9Okk0gJ9Ug07nZM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16NIT8tmdRwcg_-EgOw8vLwYeZ7XIYYMa3qibWbUDsyic=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16syZW5TD0w8L-MQV3lt_a_qNRg4JGTxD1KIXYFlrgLyU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x161W-zrBxZrcKyf-wsf7RJ_gOT6IRqlOBjdi7qwr2564g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16qvoov3iqLzIsBlmFs3Q3Mh4zbPf3I6gmHn8XOU_Oy80=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16XL3xrdFIlPITPm7O_B__fI1yCoq2tgVb6EXHKi2sm98=',
      'err': 0,
    }),
  ])
# ---
